build html file and developed basic css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,61 @@
     <title>Iron Man</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="logo">Iron Man</div>
+        <div class="links">
+            <ul>                
+                <li>
+                    <a href="#">Iron Man series</a>
+                <li>
+                    <a href="#">Avengers series</a>
+                <li>
+                    <a href="#">the others</a>
+            </ul>
+        </div>
+    </div>
+    <div class="main-part">
+        <div class="mains-left-side">
+            <h1>I'm Iron Man</h1>
+            <div>
+                A wealthy American business magnate, playboy, philanthropist, inventor and ingenious scientist, Anthony Edward "Tony" Stark.
+            </div>
+            <button onclick="location.href = 'https://en.wikipedia.org/wiki/Iron_Man';" class="wiki-redirect">More</button>
+        </div>
+        <img src="https://live.staticflickr.com/7047/6927546810_21d3e5f669_b.jpg" alt="Iron Man's poster">
+    </div>
+    <div class="informations">
+        <h2>His Projects</h2>
+        <div class="info-row">
+            <div class="info-container">
+                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b4/Iron_Man_PP_-_Front.jpeg/180px-Iron_Man_PP_-_Front.jpeg" alt="Iron Man's helmet">
+                <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            </div>
+            <div class="info-container">
+                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b4/Iron_Man_PP_-_Front.jpeg/180px-Iron_Man_PP_-_Front.jpeg" alt="Iron Man's helmet">
+                <div class="text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+            </div>
+            <div class="info-container">
+                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b4/Iron_Man_PP_-_Front.jpeg/180px-Iron_Man_PP_-_Front.jpeg" alt="Iron Man's helmet">
+                <div class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            </div>
+            <div class="info-container">
+                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b4/Iron_Man_PP_-_Front.jpeg/180px-Iron_Man_PP_-_Front.jpeg" alt="Iron Man's helmet">
+                <div class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            </div>
+        </div>
+    </div>
+    <div class="quote">
+        <div class="quote-itself">United? Unity isn’t about being the same. It’s about working together. What you can’t calculate, Ultron, is that our differences are our greatest strength.</div>
+        <div class="author-quote">Tony Stark</div>
+    </div>
+    <div class="sign-part">
+        <h3>Want more information?</h3>
+        <div class="call-to-action-text">Don't worry, it's free. You can get more information that you might need.</div>
+        <button onclick="location.href = https://marvelcinematicuniverse.fandom.com/wiki/Iron_Man';" class="signup-redirect">More</button>
+    </div>
+    <div class="footer">
+        Copyright © The Odin Project 2022
+    </div>
 </body>
 </html>
