--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="sign-part">
         <h3>Want more information?</h3>
         <div class="call-to-action-text">Don't worry, it's free. You can get more information that you might need.</div>
-        <button onclick="location.href = https://marvelcinematicuniverse.fandom.com/wiki/Iron_Man';" class="signup-redirect">More</button>
+        <button onclick="location.href = 'https://marvelcinematicuniverse.fandom.com/wiki/Iron_Man';" class="signup-redirect">More</button>
     </div>
     <div class="footer">
         Copyright © The Odin Project 2022
