found sollution to left and right padding eating bg color

--- a/index.html
+++ b/index.html
@@ -9,62 +9,74 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">Iron Man</div>
-        <div class="links">
-            <ul>                
-                <li>
-                    <a href="#">Iron Man series</a>
-                <li>
-                    <a href="#">Avengers series</a>
-                <li>
-                    <a href="#">the others</a>
-            </ul>
+        <div class="padding-container">
+            <div class="logo">Iron Man</div>
+            <div class="links">
+                <ul>                
+                    <li>
+                        <a href="#">Iron Man series</a>
+                    <li>
+                        <a href="#">Avengers series</a>
+                    <li>
+                        <a href="#">the others</a>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="main-part">
-        <div class="mains-left-side">
-            <h1>I'm Iron Man</h1>
-            <div class="main-part-text">
-                A wealthy American business magnate, playboy, philanthropist, inventor and ingenious scientist, Anthony Edward "Tony" Stark.
+        <div class="padding-container">
+            <div class="mains-left-side">
+                <h1>I'm Iron Man</h1>
+                <div class="main-part-text">
+                    A wealthy American business magnate, playboy, philanthropist, inventor and ingenious scientist, Anthony Edward "Tony" Stark.
+                </div>
+                <button onclick="location.href = 'https://en.wikipedia.org/wiki/Iron_Man';" class="wiki-redirect">More</button>
             </div>
-            <button onclick="location.href = 'https://en.wikipedia.org/wiki/Iron_Man';" class="wiki-redirect">More</button>
+            <img src="https://live.staticflickr.com/7047/6927546810_21d3e5f669_b.jpg" alt="Iron Man's poster">
         </div>
-        <img src="https://live.staticflickr.com/7047/6927546810_21d3e5f669_b.jpg" alt="Iron Man's poster">
     </div>
     <div class="informations">
-        <div class="info-header">His Projects</div>
-        <div class="info-row">
-            <div class="info-container">
-                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b4/Iron_Man_PP_-_Front.jpeg/180px-Iron_Man_PP_-_Front.jpeg" alt="Iron Man's helmet">
-                <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
-            </div>
-            <div class="info-container">
-                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b4/Iron_Man_PP_-_Front.jpeg/180px-Iron_Man_PP_-_Front.jpeg" alt="Iron Man's helmet">
-                <div class="text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-            </div>
-            <div class="info-container">
-                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b4/Iron_Man_PP_-_Front.jpeg/180px-Iron_Man_PP_-_Front.jpeg" alt="Iron Man's helmet">
-                <div class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
-            </div>
-            <div class="info-container">
-                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b4/Iron_Man_PP_-_Front.jpeg/180px-Iron_Man_PP_-_Front.jpeg" alt="Iron Man's helmet">
-                <div class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+        <div class="padding-container">
+            <div class="info-header">His Projects</div>
+            <div class="info-row">
+                <div class="info-container">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b4/Iron_Man_PP_-_Front.jpeg/180px-Iron_Man_PP_-_Front.jpeg" alt="Iron Man's helmet">
+                    <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                </div>
+                <div class="info-container">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b4/Iron_Man_PP_-_Front.jpeg/180px-Iron_Man_PP_-_Front.jpeg" alt="Iron Man's helmet">
+                    <div class="text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+                </div>
+                <div class="info-container">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b4/Iron_Man_PP_-_Front.jpeg/180px-Iron_Man_PP_-_Front.jpeg" alt="Iron Man's helmet">
+                    <div class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                </div>
+                <div class="info-container">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b4/Iron_Man_PP_-_Front.jpeg/180px-Iron_Man_PP_-_Front.jpeg" alt="Iron Man's helmet">
+                    <div class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                </div>
             </div>
         </div>
     </div>
     <div class="quote">
-        <div class="quote-itself">United? Unity isn’t about being the same. It’s about working together. What you can’t calculate, Ultron, is that our differences are our greatest strength.</div>
-        <div class="author-quote">-Tony Stark</div>
+        <div class="padding-container">
+            <div class="quote-itself">United? Unity isn’t about being the same. It’s about working together. What you can’t calculate, Ultron, is that our differences are our greatest strength.</div>
+            <div class="author-quote">-Tony Stark</div>
+        </div>
     </div>
     <div class="sign-part">
-        <div class="left-sign">
-            <div class="sign-header">Want more information?</div>
-            <div class="call-to-action-text">Don't worry, it's free. You can get more information that you might need.</div>
+        <div class="padding-container">
+            <div class="left-sign">
+                <div class="sign-header">Want more information?</div>
+                <div class="call-to-action-text">Don't worry, it's free. You can get more information that you might need.</div>
+            </div>
+            <button onclick="location.href = 'https://marvelcinematicuniverse.fandom.com/wiki/Iron_Man';" class="signup-redirect">More</button>
         </div>
-        <button onclick="location.href = 'https://marvelcinematicuniverse.fandom.com/wiki/Iron_Man';" class="signup-redirect">More</button>
     </div>
     <div class="footer">
-        Copyright © The Odin Project 2022
+        <div class="padding-container">
+            Copyright © The Odin Project 2022
+        </div>
     </div>
 </body>
 </html>
