changed html due to styling problems, further development with css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="main-part">
         <div class="padding-container">
             <div class="mains-left-side">
-                <h1>I'm Iron Man</h1>
+                <div class="main-part-head">I'm Iron Man</div>
                 <div class="main-part-text">
                     A wealthy American business magnate, playboy, philanthropist, inventor and ingenious scientist, Anthony Edward "Tony" Stark.
                 </div>
@@ -65,12 +65,16 @@
         </div>
     </div>
     <div class="sign-part">
-        <div class="padding-container">
-            <div class="left-sign">
-                <div class="sign-header">Want more information?</div>
-                <div class="call-to-action-text">Don't worry, it's free. You can get more information that you might need.</div>
+        <div class="sign-cover">
+            <div class="padding-container">
+                <div class="left-sign">
+                    <div class="sign-header">Want more information?</div>
+                    <div class="call-to-action-text">Don't worry, it's free. You can get more information that you might need.</div>
+                </div>
+                <div class="right-sign">
+                    <button onclick="location.href = 'https://marvelcinematicuniverse.fandom.com/wiki/Iron_Man';" class="signup-redirect">More</button>
+                </div>
             </div>
-            <button onclick="location.href = 'https://marvelcinematicuniverse.fandom.com/wiki/Iron_Man';" class="signup-redirect">More</button>
         </div>
     </div>
     <div class="footer">
